--- a/.github/workflows/coba.yml
+++ b/.github/workflows/coba.yml
@@ -1,9 +1,9 @@
-name: Belajar CI/CD Python
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
-      - main
+      - main  # Jalankan pipeline saat ada push ke branch main
 
 jobs:
   install:
@@ -13,8 +13,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python 3.13
-        uses: actions/setup-python@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: 3.13
 
@@ -23,7 +23,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-  build-and-push:
+  build_and_push_ecr:
     needs: install
     runs-on: ubuntu-latest
 
@@ -31,44 +31,74 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Zip application for deployment
-        run: zip -r application.zip . -x '*.git*'
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Upload to S3
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Build, Tag, and Push Docker image to ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+          IMAGE_TAG: ${{ github.sha }}
         run: |
-          aws s3 cp application.zip s3://$S3_BUCKET_NAME/$S3_KEY
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+  upload_to_s3:
+    needs: build_and_push_ecr
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Zip the application
+        run: zip -r flask-app.zip .
+
+      - name: Upload ZIP to S3
+        run: |
+          aws s3 cp flask-app.zip s3://${{ secrets.S3_BUCKET_NAME }}/flask-app.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-          S3_KEY: "deployments/application-${{ github.sha }}.zip"
 
   # deploy:
-  #   needs: build-and-push
+  #   needs: upload_to_s3
   #   runs-on: ubuntu-latest
 
   #   steps:
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v4
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+  #         aws-region: ${{ secrets.AWS_REGION }}
+
   #     - name: Deploy to Elastic Beanstalk
   #       run: |
   #         aws elasticbeanstalk create-application-version \
-  #           --application-name ${{ secrets.EB_APPLICATION_NAME }} \
+  #           --application-name ${{ secrets.EB_APP_NAME }} \
   #           --version-label $GITHUB_SHA \
-  #           --source-bundle S3Bucket=$S3_BUCKET_NAME,S3Key=$S3_KEY \
-  #           --region $AWS_REGION
+  #           --source-bundle S3Bucket=${{ secrets.S3_BUCKET_NAME }},S3Key=flask-app.zip \
+  #           --process
 
   #         aws elasticbeanstalk update-environment \
   #           --environment-name ${{ secrets.EB_ENV_NAME }} \
   #           --version-label $GITHUB_SHA
-  #       env:
-  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         AWS_REGION: ${{ secrets.AWS_REGION }}
-  #         AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-          
-  #         S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-  #         S3_KEY: "deployments/application-${{ github.sha }}.zip"
 
-  #         EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
-  #         EB_APP_NAME: ${{ secrets.EB_APPLICATION_NAME }}
+  #     - name: Check Elastic Beanstalk Health Status
+  #       run: |
+  #         aws elasticbeanstalk describe-environment-health \
+  #           --environment-name ${{ secrets.EB_ENV_NAME }} \
+  #           --attribute HealthStatus --query "HealthStatus"
