--- a/.github/workflows/coba.yml
+++ b/.github/workflows/coba.yml
@@ -96,7 +96,7 @@ jobs:
 
       - name: Configure kubectl
         run: |
-          aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }} --role-arn arn:aws:eks:us-east-1:352096126793:cluster/wonderful-hiphop-otter
+          aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
 
       - name: Deploy to EKS
         env:
